# AirSense

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  hardware_config.h  sdkconfig.defaults  start-esp-idf.ps1
doc/: build_guide.md  hardware_setup.md
doc/mcu/esp32-c5/markdown/: REDEME.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/algorithms/: sensirion_gas_index_algorithm.c  sensirion_gas_index_algorithm.h
main/sensors/: dart_wzh3n.c  dart_wzh3n.h  dps310_legacy.c  dps310_legacy.h  prosense_wzh3n.c  prosense_wzh3n.h  scd41.c  scd41.h  senseair_s8.c  senseair_s8.h  senseair_s88lp.c  senseair_s88lp.h  sgp41.c  sgp41.h  sht85.c  sht85.h
pcb/: AirSense.eprj
pcb/markdown/: readme.md
